--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Micheal Cletus Portfolio</h1>  
   <h2>I'm a Web Developer</h2>
   <hr />
-  <a href="4.3 HTML Porfolio Project/public/movie-ranking.html"> <h1>Movie Ranking Project</h1></a>
+  <a href="../public/movie-ranking.html"> <h1>Movie Ranking Project</h1></a>
    <img src="../2nd pic work.PNG" alt="Best movie list image" width="600" height="600">
    <a href="4.3 HTML Porfolio Project/public/birthday-invite.html" alt="Birthday cake link"><h1>Birthday Invite Project</h1></a>
    <img src="../1st pic work.PNG" alt="Birthday cake image" width="600" height="600">
